<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaoBao</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="register_title">Register</string>
	<string name="user_name">账号</string>
	<string name="user_pwd">密码</string>
	<string name="indentifyingcode">验证码</string>
	<string name="register_button">Sign Up</string>
	<string name="exit_button">退出</string>
	<string name="r_hint_1_txt">username&#8230;</string>
	<string name="r_hint_2_txt">password&#8230;</string>
	<string name="r_hint_3_txt">验证码&#8230;</string>
	<string name="login_txt">Login</string>
	<string name="login_title">我的淘宝</string>
	<string name="taobao_main">主页</string>
	<string name="main_2_title">商品列表</string>
	<string name="more_btn">更多</string>
	<string name="sigin_tip">Need an account?</string>
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">下拉显示更多</string>
    <string name="plgl_txt">批量管理</string>
    <string name="search_txt">搜索</string>
    <string name="sort_txt">按价格排序</string>
    <string name="chooseAll">全选</string>
    <string name="nochoose">全消</string>
    <string name="batchDelete">批量删除</string>
</resources>
