<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/taobao_background_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/taobao_danlan"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/taobao_arrowhead" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register_title"
                android:textColor="@color/white"
                android:textSize="30dp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        style="@style/taobao_style1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/user_r_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/taobao_danhuise"
            android:focusable="true"
            android:hint="@string/r_hint_1_txt"
            android:paddingLeft="12dp" />
    </LinearLayout>

    <LinearLayout
        style="@style/taobao_style1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/user_r_password1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/taobao_danhuise"
            android:hint="@string/r_hint_2_txt"
            android:paddingLeft="12dp"
            android:password="true" />
    </LinearLayout>

    <LinearLayout
        style="@style/taobao_style1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/user_r_password2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/taobao_danhuise"
            android:hint="@string/r_hint_2_txt"
            android:paddingLeft="12dp"
            android:password="true" />
    </LinearLayout>

    <LinearLayout
        style="@style/taobao_style1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/indentifyingcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/r_hint_3_txt" />

        <org.jan.taobao.activities.CheckView
            android:id="@+id/checkView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1" >

        </org.jan.taobao.activities.CheckView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp" >

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/taobao_danlan"
            android:text="@string/register_button"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>