<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/taobao_background_color" >

    <RelativeLayout
        android:layout_alignParentTop="true"
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/taobao_danlan"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/list2_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/taobao_arrowhead" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_2_title"
                android:textColor="@color/white"
                android:textSize="30dp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl1"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/manageList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.1dp"
            android:layout_weight="1"
            android:background="@color/taobao_menu_huise"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/batchManageBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/taobao_chooseall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chooseAll"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.1dp"
            android:layout_weight="1"
            android:background="@color/taobao_menu_huise"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/taobao_notchoose" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nochoose"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.1dp"
            android:layout_weight="1"
            android:background="@color/taobao_menu_huise"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/sortBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/taobao_alldelete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/batchDelete"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/taobao_menu_huise"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/moreItemBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mytaobao_more_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_btn"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>